# cheyette

./: build.py  pyproject.toml
cheyette/: __init__.py
cheyette/src/_cheyette/: CMakeLists.txt  _cheyette_pybind.cpp  piecewisefunction.hpp
docs/: demo.ipynb
tests/: test_cheyette.py
tests/cpp_tests/: test_piecewisefunction.cpp
