[tool.poetry]
name = "cheyette"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

include = [
    # Source files for C extensions must be included in the source distribution.
    { path = "cheyette/src/_cheyette/*.*", format = "sdist" },
    # C extensions must be included in the wheel distribution.
    { path = "cheyette/*.pyd", format = "wheel" },
    { path = "cheyette/*.so", format = "wheel" },
]
exclude = [
    "cheyette/src/_cheyette/*.cpp",
]

[tool.poetry.build]
generate-setup-file = false
script = "build.py"


[tool.poetry.dependencies]
python = ">=3.12,<3.13.dev0"


[tool.poetry.group.dev.dependencies]
cmake = "^3.11.0"
pybind11 = "^2.6.2"
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core", "cmake", "ninja"]
build-backend = "poetry.core.masonry.api"
